--- a/jeu QP.cbp
+++ b/jeu QP.cbp
@@ -36,11 +36,22 @@
 		<Unit filename="amulette.h" />
 		<Unit filename="armure.cpp" />
 		<Unit filename="armure.h" />
+		<Unit filename="aventurier.cpp" />
+		<Unit filename="aventurier.h" />
+		<Unit filename="doctest.h" />
 		<Unit filename="epee.cpp" />
 		<Unit filename="epee.h" />
 		<Unit filename="equipement.cpp" />
 		<Unit filename="equipement.h" />
-		<Unit filename="main.cpp" />
+		<Unit filename="maintest.cpp" />
+		<Unit filename="monstre.cpp" />
+		<Unit filename="monstre.h" />
+		<Unit filename="monstreAveugle.cpp" />
+		<Unit filename="monstreAveugle.h" />
+		<Unit filename="monstreVoyant.cpp" />
+		<Unit filename="monstreVoyant.h" />
+		<Unit filename="testArmure.cpp" />
+		<Unit filename="testAventurier.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
