--- a/jeu QP.cbp
+++ b/jeu QP.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="affichage.cpp" />
+		<Unit filename="affichage.h" />
 		<Unit filename="amulette.cpp" />
 		<Unit filename="amulette.h" />
 		<Unit filename="armure.cpp" />
@@ -50,6 +52,8 @@
 		<Unit filename="monstreAveugle.h" />
 		<Unit filename="monstreVoyant.cpp" />
 		<Unit filename="monstreVoyant.h" />
+		<Unit filename="terrain.cpp" />
+		<Unit filename="terrain.h" />
 		<Unit filename="testArmure.cpp" />
 		<Unit filename="testAventurier.cpp" />
 		<Unit filename="testEpee.cpp" />
