--- a/jeu QP.cbp
+++ b/jeu QP.cbp
@@ -52,11 +52,10 @@
 		<Unit filename="monstreAveugle.h" />
 		<Unit filename="monstreVoyant.cpp" />
 		<Unit filename="monstreVoyant.h" />
-		<Unit filename="terrain.cpp" />
-		<Unit filename="terrain.h" />
 		<Unit filename="testArmure.cpp" />
 		<Unit filename="testAventurier.cpp" />
 		<Unit filename="testEpee.cpp" />
+		<Unit filename="testMonstreAveugle.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
