--- a/ProjetQualiteProg.cbp
+++ b/ProjetQualiteProg.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="jeu QP" />
+		<Option title="ProjetQualiteProg" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/jeu QP" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/ProjetQualiteProg" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/jeu QP" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/ProjetQualiteProg" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,6 +32,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename=".gitignore" />
 		<Unit filename="afficheur.cpp" />
 		<Unit filename="afficheur.h" />
 		<Unit filename="amulette.cpp" />
@@ -42,7 +43,6 @@
 		<Unit filename="aventurier.h" />
 		<Unit filename="config.cpp" />
 		<Unit filename="config.h" />
-		<Unit filename="doctest.h" />
 		<Unit filename="epee.cpp" />
 		<Unit filename="epee.h" />
 		<Unit filename="equipement.cpp" />
@@ -64,8 +64,6 @@
 		<Unit filename="testEpee.cpp" />
 		<Unit filename="testMonstreVoyant.cpp" />
 		<Unit filename="testObjet.cpp" />
-		<Extensions>
-			<lib_finder disable_auto="1" />
-		</Extensions>
+		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
